--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,16 @@
 asgiref==3.8.1
+black==24.10.0
+click==8.1.7
+colorama==0.4.6
 Django==5.1.1
+flake8==7.1.1
+mccabe==0.7.0
+mypy-extensions==1.0.0
+packaging==24.1
+pathspec==0.12.1
 pillow==10.4.0
+platformdirs==4.3.6
+pycodestyle==2.12.1
+pyflakes==3.2.0
 sqlparse==0.5.1
 tzdata==2024.1
