--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -14,13 +14,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-
-    - name: Set up Docker
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y docker-compose
-
-    - name: Start Docker-Compose
+    
+    - name: Setup Docker-Compose
       run: docker-compose up -d
 
     - name: Run Tests
