--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -14,8 +14,25 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    
-    - name: Setup Docker-Compose
+
+    - name: Install Docker
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y docker.io
+        sudo systemctl start docker
+        sudo systemctl enable docker
+
+    - name: Install Docker Compose
+      run: |
+        sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+        sudo chmod +x /usr/local/bin/docker-compose
+
+    - name: Verify Docker and Docker Compose installation
+      run: |
+        docker --version
+        docker-compose --version
+
+    - name: Start Docker-Compose
       run: docker-compose up -d
 
     - name: Run Tests
