--- a/requirements.txt
+++ b/requirements.txt
@@ -5,15 +5,24 @@ colorama==0.4.6
 Django==5.1.1
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+drf-yasg==1.21.8
 flake8==7.1.1
+inflection==0.5.1
+iniconfig==2.0.0
 mccabe==0.7.0
 mypy-extensions==1.0.0
 packaging==24.1
 pathspec==0.12.1
 pillow==10.4.0
 platformdirs==4.3.6
+pluggy==1.5.0
 pycodestyle==2.12.1
 pyflakes==3.2.0
 PyJWT==2.9.0
+pytest==8.3.3
+pytest-django==4.9.0
+pytz==2024.2
+PyYAML==6.0.2
 sqlparse==0.5.1
 tzdata==2024.1
+uritemplate==4.1.1
