--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -24,4 +24,5 @@ jobs:
       run: docker-compose up -d
 
     - name: Run Tests
-      run: docker exec backend sh -c "pytest ."
+      run: docker exec backend sh -c "pytest /core"
+      
