--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -24,5 +24,5 @@ jobs:
       run: docker-compose up -d
 
     - name: Run Tests
-      run: docker exec backend sh -c "pytest /app/core/"
+      run: docker exec backend sh -c "pytest "
       
