--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -13,12 +13,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v3
 
-    - name: Set up Docker
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y docker-compose
+    # - name: Set up Docker
+    #   run: |
+    #     sudo apt-get update
+    #     sudo apt-get install -y docker-compose
 
     - name: Start Docker-Compose
       run: docker-compose up -d
