--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,11 +21,13 @@ services:
       - SECRET_KEY=django-insecure-w^@bj@s=-tx_rv-k^us_z3ox6jjtexq$q6hiy*!nhkzpr(wbhh
       - DEBUG=True
       - ALLOWED_HOSTS=*
+      - CELERY_BROKER_URL=redis://redis:6379/0
     depends_on:
       - redis
+
   worker:
     build: .
-    command: celery -A core worker --loglevel=info
+    command: celery -A core worker --loglevel=info --uid=www-data 
     volumes:
       - ./core:/app
     depends_on:
