--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,23 @@
+amqp==5.2.0
 asgiref==3.8.1
+billiard==4.2.1
 black==24.10.0
+celery==5.4.0
 click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
 colorama==0.4.6
 Django==5.1.1
+django-cors-headers==4.6.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 drf-yasg==1.21.8
+Faker==30.8.1
 flake8==7.1.1
 inflection==0.5.1
 iniconfig==2.0.0
+kombu==5.4.2
 mccabe==0.7.0
 mypy-extensions==1.0.0
 packaging==24.1
@@ -16,15 +25,20 @@ pathspec==0.12.1
 pillow==10.4.0
 platformdirs==4.3.6
 pluggy==1.5.0
+prompt_toolkit==3.0.48
 pycodestyle==2.12.1
 pyflakes==3.2.0
 PyJWT==2.9.0
 pytest==8.3.3
 pytest-django==4.9.0
+python-dateutil==2.9.0.post0
 pytz==2024.2
 PyYAML==6.0.2
+redis==5.2.0
+six==1.16.0
 sqlparse==0.5.1
+typing_extensions==4.12.2
 tzdata==2024.1
 uritemplate==4.1.1
-celery
-redis
+vine==5.1.0
+wcwidth==0.2.13
