--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - ./core:/app
+      - ./pytest.ini:/app/pytest.ini
     ports:
       - "8000:8000"
     environment:
