--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,11 @@ click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
+cron-descriptor==1.4.5
 Django==5.1.1
+django-celery-beat==2.7.0
 django-cors-headers==4.6.0
+django-timezone-field==7.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 drf-yasg==1.21.8
@@ -31,6 +34,7 @@ pyflakes==3.2.0
 PyJWT==2.9.0
 pytest==8.3.3
 pytest-django==4.9.0
+python-crontab==3.2.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
 PyYAML==6.0.2
