--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ asgiref==3.8.1
 billiard==4.2.1
 black==24.10.0
 celery==5.4.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
 click==8.1.7
 click-didyoumean==0.3.1
 click-plugins==1.1.1
@@ -18,6 +20,8 @@ djangorestframework-simplejwt==5.3.1
 drf-yasg==1.21.8
 Faker==30.8.1
 flake8==7.1.1
+gunicorn==23.0.0
+idna==3.10
 inflection==0.5.1
 iniconfig==2.0.0
 kombu==5.4.2
@@ -39,10 +43,12 @@ python-dateutil==2.9.0.post0
 pytz==2024.2
 PyYAML==6.0.2
 redis==5.2.0
+requests==2.32.3
 six==1.16.0
 sqlparse==0.5.1
 typing_extensions==4.12.2
 tzdata==2024.1
 uritemplate==4.1.1
+urllib3==2.2.3
 vine==5.1.0
 wcwidth==0.2.13
